tests/aster/x/ocaml/while_loop.error
exit status 2
File "/workspace/mochi/tests/transpiler/x/ocaml/while_loop.ml", line 9, characters 9-17:
9 |     with Continue -> ()
             ^^^^^^^^
Error: This variant pattern is expected to have type exn
       There is no constructor Continue within type exn
