tests/aster/x/ocaml/while_loop.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let i = ref 0 in
  (try while (!i < 3) do
    try
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int !i]));
  i := (!i + 1);
    with Continue -> ()
  done with Break -> ())
